# Otus_MapReduce

./: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  MapReduce.cpp  MapReduce.h  queue.h
